<resources>
    <string name="app_name">Hitung Zakat</string>

    <!-- Jenis Zakat -->
    <string name="zakat_penghasilan">Zakat Penghasilan</string>
    <string name="zakat_maal">Zakat Maal</string>

    <string name="jmlh_pendapatan">Jumlah Gaji Perbulan</string>
    <string name="bonus_dll">Bonus, THR dan Lainnya</string>
    <string name="hitung">Hitung</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

    <!-- Output format -->
    <string name="status_zakat_x">%1s</string>
    <string name="zakat_x"><b>%1s</b></string>
    <string name="pendapatan_x">Pendapatan Pertahun: %1$s</string>
    <string name="bonus_x">Bonus, THR dan Lainnya : %1$s</string>
    <string name="bagikan_template">Biaya zakat yang harus dibayarkan: %1$s \n\nJumlah %2$s</string>
    <string name="hasil_x">Biaya Zakat: %1$s</string>

    <string name="pendapatan_invalid">Gaji tidak boleh kosong.</string>
    <string name="bonus_invalid">Bonus tidak boleh kosong.</string>
    <string name="zakat_tidak_wajib">Tidak Wajib Bayar Zakat, karena Total Pendapatan Pertahun Tidak Sesuai Nisab</string>
    <string name="zakat_wajib">Wajib Bayar Zakat, dengan Jumlah:</string>
    <string name="input_gaji">Input Gaji perbulan</string>
    <string name="input_bonus">Input Bonus, DLL</string>
    <string name="wajib">Wajib Zakat</string>
    <string name="tidak_wajib">Tidak Wajib Zakat</string>

    <string name="copyright">Aplikasi hitung zakat adalah sebuah aplikasi yang dibuat untuk membantu umat Muslim dalam menghitung zakat yang harus mereka bayarkan. \n\nTemukan kodenya di \nhttps://github.com/hadiansyach/hitung-zakat.git \n\nCopyright ©2023 Ihsan Hadiansyach.\nAll rights reserved.</string>
    <string name="belum_ada_data">Belum Ada Data</string>

    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="History">History</string>
    <string name="bagikan">Bagikan</string>
    <string name="jenis_zakat">Jenis Zakat</string>
    <string name="update_harga_emas">Update Harga Emas</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="info_harga_emas">Info Harga Emas</string>

<!--    notification    -->
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data emas otomatis</string>
    <string name="notif_title">Info harga emas terbaru!</string>
    <string name="notif_text">Cek sekarang biar melek harga emas..</string>

</resources>