<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/placeholderGaji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/jmlh_pendapatan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeholderBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bonus_dll"
        app:layout_constraintStart_toStartOf="@+id/inputGajiBulanan"
        app:layout_constraintTop_toBottomOf="@+id/inputGajiBulanan" />

    <EditText
        android:id="@+id/inputGajiBulanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/input_gaji"
        app:layout_constraintStart_toStartOf="@+id/placeholderGaji"
        app:layout_constraintTop_toBottomOf="@+id/placeholderGaji" />

    <EditText
        android:id="@+id/inputBonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/input_bonus"
        app:layout_constraintStart_toStartOf="@+id/placeholderBonus"
        app:layout_constraintTop_toBottomOf="@+id/placeholderBonus" />

    <Button
        android:id="@+id/hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hitung"
        app:layout_constraintStart_toStartOf="@+id/inputBonus"
        app:layout_constraintTop_toBottomOf="@+id/inputBonus" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hitung" />

        <TextView
            android:id="@+id/kondisi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="@string/kondisi_zakat_x"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

    <TextView
        android:id="@+id/uangZakat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/kondisi"
        app:layout_constraintStart_toStartOf="@+id/kondisi"
        app:layout_constraintTop_toBottomOf="@+id/kondisi"
        tools:text="@string/rp_x" />

    <TextView
        android:id="@+id/totalPendapatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uangZakat"
        tools:text="@string/pendapatan_x" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>