<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/statusIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/cirlcle_background"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="W" />

    <TextView
        android:id="@+id/tanggalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="21 Mei 2023"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/statusIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusZakat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/zakat_x"
        app:layout_constraintStart_toStartOf="@+id/tanggalTextView"
        app:layout_constraintTop_toBottomOf="@+id/tanggalTextView" />

    <TextView
        android:id="@+id/zakatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/hasil_x"
        app:layout_constraintStart_toStartOf="@+id/tanggalTextView"
        app:layout_constraintTop_toBottomOf="@+id/statusZakat" />

    <TextView
        android:id="@+id/pendapatanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pendapatan_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/zakatTextView"
        app:layout_constraintTop_toBottomOf="@+id/zakatTextView" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/hapus"
        android:background="@drawable/baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="@+id/pendapatanTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tanggalTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>